syntax = "proto3";

import "pl_types.proto";

option java_multiple_files = true;
option java_package = "org.davincischools.leo.protos.error_service";

package error_service;

service ErrorService {
  rpc ReportError (ReportErrorRequest) returns (ReportErrorResponse) {}
}

message ReportErrorRequest {
  optional string name = 1;
  optional string error = 7;
  optional string source_url = 13;
  optional pl_types.UserX user_x = 8;

  optional string request = 9;
  optional string request_url = 4;
  optional bytes request_body = 14;

  optional string response = 10;
  optional string response_url = 11;
  optional bytes response_body = 12;

  reserved 2, 3, 5, 6;
}

message ReportErrorResponse {
  optional string failure_reason = 1;
  optional string issue_link = 2;
}