syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.davincischools.leo.protos.pl_types";

package pl_types;

message Assignment {
  optional int32 id = 1;
  optional string name = 3;
  optional string short_descr = 4;
  optional string long_descr = 5;

  optional ClassX class_x = 2;
}

message ClassX {
  optional int32 id = 1;
  optional string name = 2;
  optional string short_descr = 3;
  optional string long_descr = 4;
}

message District {
  optional int32 id = 1;
  optional string name = 2;
}

message KnowledgeAndSkill {
  optional int32 id = 1;
  optional string name = 3;
  optional string short_descr = 4;
  optional string long_descr = 5;
}

message Project {
  optional int32 id = 1;
  optional string name = 2;
  optional string short_descr = 3;
  optional string long_descr = 4;
}

message School {
  optional int32 id = 1;
  optional int32 district_id = 2;
  optional string name = 3 ;
  optional string address = 4 ;
}

message User {
  optional int32 id = 1;
  optional int32 district_id = 2;
  optional string first_name = 3;
  optional string last_name = 4;
  optional string email_address = 5;
  optional string password = 6;
  optional string verify_password = 7;

  optional bool is_admin = 8;
  optional bool is_teacher = 9;
  optional bool is_student = 10;
}
